# sachs-src-fields

./: .gitignore  CLAUDE.md  README.html  README.md  pyproject.toml
notebooks/: demo.ipynb  demo_fk_cl.ipynb  demo_sachsray.ipynb  evolution_cosmo.ipynb  field_twopoint_crosscheck.ipynb  moments_crosscheck.ipynb  moments_crosscheck_explained.md  moments_workflow.ipynb  test.ipynb  twopoint_crosscheck.ipynb
perFLRW/: __init__.py  cosmology.py
prototype/: REDESIGN.md  bench.py  crosscheck_endtoend.py  crosscheck_old_new.py  crosscheck_saddle_sign.py  sachs_jax.py  scale_test.py
prototype/fk_mc/: README.md  _setup.py  brute_fk.py  cl_contribution.py  figure12.py  fk_highstat.py  route.py  stability_test.py  vr_channels.py
prototype/fk_mc/outputs/: fk_channels.npz
sachsfield/: __init__.py  coefficients.py  fluctuations.py  saddle.py  solver.py  sources.py  utils.py
sachsray/: __init__.py  fields.py  physics.py  raytrace.py  solvers.py
tests/: test_fields.py  test_perflrw_background.py  test_sachsray.py  test_xval_endtoend.py
